--- a/projekt1/vortrag/vortrag.tex
+++ b/projekt1/vortrag/vortrag.tex
@@ -5,7 +5,7 @@
 \usepackage{listings}
 \usepackage{courier}
 \lstset{
-basicstyle=\footnotesize\ttfamily, % Standardschrift
+basicstyle=\tiny\ttfamily, % Standardschrift
 numbers=left, % Ort der Zeilennummern
 tabsize=4, % Groesse von Tabs
 }
@@ -40,7 +40,7 @@ tabsize=4, % Groesse von Tabs
 
 \begin{frame}
 	\frametitle{Inhaltsverzeichnis}
-	\tableofcontents[currentsection]
+	\tableofcontents
 \end{frame}
 
 \section{Allgemeines}
