--- a/projekt3/vortrag/vortrag.tex
+++ b/projekt3/vortrag/vortrag.tex
@@ -213,8 +213,10 @@ minimal einfach & [ ''A5'', ''PSL(3,2)'', ''PSL(2,8)'', \\
 \begin{frame}
 	\frametitle{Ergebnis}
 	\begin{quote}
-	 Programm rechnet noch, Zwischenergebnisse ohne $A_7$ bis PSL(3,3):\\
-	 A5, PSL(3,2), PSL(2,8), A6 PSL(2,11), PSL(2,13), PSL(2,16), PSL(2,17), PSL(2,19), PSL(2,23), PSL(2,25), PSL(2,27)  (Alle bisher geprüften)
+	 Programm rechnet noch, Zwischenergebnisse bis PSL(3,3):\\
+	 Mit nicht trivialen Partitionen: A5, PSL(3,2), PSL(2,8), A6 PSL(2,11), PSL(2,13), PSL(2,16), PSL(2,17), PSL(2,19), PSL(2,23), PSL(2,25), PSL(2,27)  \\
+	 ohne: A7\\
+	 noch nicht getestet: PSL(3,3), PSU(3,3), M11
 	 
 	 
 		 
